--- a/pages/documentation/documentation.module.css
+++ b/pages/documentation/documentation.module.css
@@ -1,42 +1,21 @@
-.card {
-  background-color: light-dark(
-    var(--mantine-color-gray-0),
-    var(--mantine-color-dark-6)
-  );
+.wrapper {
+  padding-top: calc(var(--mantine-spacing-xl) * 2);
+  padding-bottom: calc(var(--mantine-spacing-xl) * 2);
+  min-height: rem(650px);
 }
 
 .title {
-  font-family: Greycliff CF, var(--mantine-font-family);
-  font-weight: 700;
+  margin-bottom: calc(var(--mantine-spacing-xl) * 1.5);
+}
+
+.item {
+  border-radius: var(--mantine-radius-md);
+  margin-bottom: var(--mantine-spacing-lg);
+  border: rem(1px) solid
+    light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 }
 
 .description {
   max-width: 600px;
   margin-top: 2%;
-}
-
-.description::after {
-  content: "";
-  display: block;
-  background-color: red;
-  width: rem(45);
-  height: rem(2);
-  margin-top: "2px";
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  border-radius: var(--mantine-radius-md);
-  height: rem(90px);
-  background-color: light-dark(
-    var(--mantine-color-white),
-    var(--mantine-color-dark-7)
-  );
-  transition: box-shadow 150ms ease, transform 100ms ease;
 }
